# bevy_cs_managed

./: .gitignore  Builder.cs  Cargo.toml  README.md  Runtime.cs  build.rs
assets/engine/: Bevy.cs
assets/scripts/: Player.cs
examples/: simple.rs
examples/assets/: Managed.csproj  Player.cs
examples/assets/engine/: Bevy.cs  Engine.csproj
src/: config.rs  error.rs  hostfxr.rs  lib.rs  main.rs  runtime.rs
src/dotnet/: builder.rs  diagnostic.rs  mod.rs
